<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/titleOfChangepsd"
        android:textSize="25px" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_psd"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/eT_OriginalPsd"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.63"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/new_psd"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/eT_NewPsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:ems="10"
                android:inputType="textPassword" >

                
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/re_psd"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/eT_RePsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" >
                
            </EditText>        
        </LinearLayout>
                <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
                 <Button
                android:id="@+id/Bt_Change"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/change" >
            </Button>   
             <Button
                android:id="@+id/Bt_Back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/back" >
            </Button>    
              
        </LinearLayout>
        
        
        
        
        
    </LinearLayout>

</LinearLayout>