<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="232dp"
                android:layout_height="187dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/rBSearchById"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rBSearchById"
                    android:checked="true" >
                </RadioButton>
                  <EditText
            android:id="@+id/eTId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword" />
                <RadioButton
                    android:id="@+id/rBSearchByCato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rBSearchByCato" />

                <Spinner
                    android:id="@+id/spinCato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </LinearLayout>
        
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >

     <ListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="5dp" >

     </ListView>
 </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginRight="15dp"
        android:layout_marginTop="29dp"
        android:text="@string/searchItem" />

</RelativeLayout>